add a vocab to make the model smaller

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ pypinyin
 opencc-python-reimplemented
 zhon
 hanlp
-tensorflow-macos
-tensorflow-metal==0.7.1
+# tensorflow-macos
+# tensorflow-metal==1.1.0
